--- a/style.css
+++ b/style.css
@@ -3,6 +3,33 @@
     font-weight: bold;
 }
 
+.scale-up-center:hover {
+	-webkit-animation: scale-up-center 0.4s ease-in-out both;
+	        animation: scale-up-center 0.4s ease-in-out both;
+}
+
+ @-webkit-keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  
+
 .text-danger-1{
     color: #ffffff;
     text-shadow: #fff 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px;
